<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_specification"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/spesifikasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_spec_display_title"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:text="Display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_specification"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_spec_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_specs_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_specification"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_spec_size_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_spec_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_specs_size"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_battery_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_size"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_battery"
        android:layout_width="0dp"
        android:layout_height="266dp"
        android:text="@string/content_specs_battery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_size"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="105dp" />

</androidx.constraintlayout.widget.ConstraintLayout>